--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         <!---------task6 ---------->
 
         <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+        <br>
+        <!---------task7 ---------->
+
+        <input id="font-size-control" type="range" />
+        <br />
+        <span id="text">Абракадабра!</span>
 
     </main>
 
